...
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_right"
            app:popExitAnim="@anim/to_left" />
    </fragment>
    <fragment
        android:id="@+id/tvFragment"
        android:name="com.fyndev.moviecatalogue.home.tv.TvFragment"
        android:label="Tv Show"
        tools:layout="@layout/fragment_tv">
        <action
            android:id="@+id/action_tvFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_right"
            app:popExitAnim="@anim/to_left" />
    </fragment>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.fyndev.moviecatalogue.home.favorite.FavoriteFragment"
        android:label="Favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_favoriteFragment_to_detailFragment2"
            app:destination="@id/detailFragment"
...
